--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines":{
-     "node": "9.2.0",
-     "npm": "5.5.1"
+  "engines": {
+    "node": "9.2.0",
+    "npm": "5.5.1"
   },
   "scripts": {
     "start": "node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.2"
+  }
 }
